--- a/.env
+++ b/.env
@@ -3,4 +3,10 @@ NEXT_PUBLIC_WS_BPM_URL=ws://localhost:8000/ws/bpm
 NEXT_PUBLIC_WS_UC_URL=ws://localhost:8000/ws/uc
 
 
-NEXT_PUBLIC_IS_USING_MOC=1
+NEXT_PUBLIC_IS_USING_MOC=0
+
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_PATIENTS_RECENT_URL=http://localhost:8000/api/patients/recent
+NEXT_PUBLIC_API_PATIENTS_SEARCH_URL=http://localhost:8000/api/patients/search
+NEXT_PUBLIC_API_PATIENTS_CREATE_URL=http://localhost:8000/api/patients
+NEXT_PUBLIC_API_STUDIES_RECENT_URL=http://localhost:8000/api/studies/recent
